Fixed mobile alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,7 @@ p {
 }
 
 .hero-intro {
-  padding-top: 10vw;
+  padding-top: 12vw;
   font-weight: normal;
   font-style: oblique;
 }
